src/_includes/components/header.css
@media only screen and (min-width: 64em) {
  nav.container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 90em;
    width: 100%; 
    background-color: var(--nav-background);
    position: fixed;
    z-index: 999;
    backdrop-filter: blur(1em);
    box-shadow: 0 0.5em 1em 0.4em #22222799;
    border-radius: 0 0 1em 1em;
    left: 50%;
    transform: translateX(-50%);
    height: 6em; /**/
    padding-inline: calc(1em + 4px*2);
  }
  .navbar{
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 4em;
  }
  .main-menu{
    display: flex;
    align-items: center;
    list-style: none;
    gap: 2em;
    height: 4em;
    margin: 0 !important;
  }
  .nav-item > a {
    color: var(--secondary-text);
    transition: 150ms;
    line-height: 2;  /* new */
    text-decoration: none;
    font-size: 1.3em;
    position: relative;
    text-align: left;
    margin: 0;
    padding: 0;
  }
  .nav-item > a::after{
    box-shadow: 0 0 0.4em var(--link-light);
    width: 0%; /*!*/
    height: 15%;
    background: linear-gradient(to right, var(--link-light), var(--link-dark));
    content: "";
    bottom: -20%;
    left: 0;
    border-radius: 100vmax;
    position: absolute;
    transition: 150ms ease-in-out;
  }
  
  .nav-item > a:hover::after{
    width: 100%;
  }
  .nav-item > a:hover{
    color: var(--primary-text);
  }
  .nav-item.nav-item-active > a{
    color: var(--primary-text);
    font-weight: bold;
  }
  .nav-item.nav-item-active > a::after{
    width: 100%;
  }
  .links{
    display: flex;
    height: 4em;
    align-items: center;
  }
  .social-links{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.7em;
    margin-right: 1em;
  }
  .social-links > a{
    color: var(--secondary-text);
    font-size: 1.6em;
  }
  button.burger{
    display: none;
  }
  .donate-gh-container{
    display: flex;
    height: 4em;
    align-items: center;
    justify-content: center;
  } 
  .donate-gh-container > div{
    height: 3em;
    display: grid;
    place-content: center;
    transition: 150ms ease-in-out;
  }
  .github-link{
    background: #eeeeff4a;
    border-radius: 0.5em;
    padding-inline: 1em;
    border: 4px solid #eeeeff99;
    margin-right: calc(0.5em + 4px*2);
  }
  .github-link:hover{
    box-shadow: 0 8px 16px #eeeeff99;
  }
  .github-link > a{
    font-size: 1.2em;
    display: flex;
    text-decoration: none;
    align-items: center;
    justify-content: space-evenly;
    gap: 0.4em;
    color: var(--primary-text);
  }
  .github-link > a > i{
    font-size: 1.4em;
  }
  .donate{
    background: #64a6e94a;
    border-radius: 0.5em;
    padding-inline: 1em;
    border: 4px solid #64a6e999;
    margin-right: calc(2em + 4px*2);
  }
  .donate:hover{
    box-shadow: 0 8px 16px #64a6e9aa;
  }
  .donate > a{
    background: none !important;
    margin: 0 !important;
    padding: 0 !important;
    font-weight: normal !important;
    color: var(--primary-text);
  }
  .download{
    height: 3em;
    background: var(--primary);
    padding-inline: 2em;
    border-radius: 0.5em;
    margin: 0;
    border: 4px solid var(--primary-light);
    box-shadow: 0 8px 16px #F47068aa;
    align-items: center;
    transition: 250ms ease-in-out;
  }
  .download:hover{
    box-shadow: 0 8px 16px -16px #F47068aa;
  }
  .download > a{
    background: none !important;
    margin: 0 !important;
    padding: 0 !important;
  }
  .social-links > a:nth-child(1) i:hover {
    color: #1DA1F2;
    filter: drop-shadow(3px 0 5px #1DA1F288);
  }
  .social-links > a:nth-child(2) i:hover {
    color: #5C4FE5;
    filter: drop-shadow(3px 0 5px #5C4FE588);
  }
  .social-links > a:nth-child(3) i:hover {
    color: #5865F2;
    filter: drop-shadow(3px 0 5px #5865F288);
  }
  .social-links > a:nth-child(4) i:hover {
    color: #0098D4;
    filter: drop-shadow(3px 0 5px #0098D488);
  }
  .social-links > a:nth-child(5) i:hover {
    color: #FF4500;
    filter: drop-shadow(3px 0 5px #FF450088);
  }
}

